<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="10dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:background="@color/mainBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/status"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/finished"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/utc_time"
            android:text="@string/_19_00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:id="@+id/match_day"
            android:text="@string/md_35"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center|start|top"
            android:textColor="@color/black"
            android:id="@+id/club1"
            android:text="@string/club_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start|bottom"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/club2"
            android:text="@string/club_2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center|end"
            android:textSize="20sp"
            android:id="@+id/homeTeamScore"
            android:text="@string/_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:textSize="18sp"
            android:id="@+id/extra_time"
            android:text="@string/_00"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center|end"
            android:id="@+id/awayTeamScore"
            android:text="@string/_0"/>
    </LinearLayout>
</LinearLayout>