<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:text="@string/today_s_fixtures"
        android:gravity="start|center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <LinearLayout
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/fixtures"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:src="@drawable/soccer"
            android:scaleType="center"
            android:layout_weight="1"
            android:contentDescription="@string/football_icon" />

        <ImageButton
            android:id="@+id/competitions"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:src="@drawable/soccer_field"
            android:scaleType="center"
            android:layout_weight="1"
            android:contentDescription="@string/football_pitch_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>